# rural-weaver-api

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: base.py  order.py  (+11 more)
docs/: README.md  api-contract.md  database.md  deployment.md  phase-6-1-alice-operational-data-model.md  phase-6-1-schema-fields.md  phase-6-2-pricing-settlement.md  phase-6-weekly-campaign-workflow.md  phase-7-1-payment-reconciliation.md  qprd.md
docs/architecture/: backend-api-contract.md  overview.md
docs/operations/: data-import-guide.md  release-checklist.md  vps-deployment-backend.md
docs/phases/: phase-6-1-alice-operational-data.md  phase-6-2-pricing-settlement.md  phase-6-weekly-campaigns.md  phase-7-1-payment-reconciliation.md  phase-7-2-3-customer-identity-registration.md  phase-7-2-frontend-admin-ops-settlement-payments.md  phase-7-state-of-art.md
docs/planning/: backlog.md  decision-log.md  po-followup.md  roadmap.md  validation-checklists.md
docs/product/: alice-operation-model.md  vision.md
infrastructure/docker/: api.Dockerfile
migrations/: env.py
migrations/versions/: 11c854d63a5b_add_weekly_campaign_workflow.py  6fb040551fb5_add_pricing_settlement_model.py  7516fa3f7cf0_initial_schema.py  90e58f34cbaa_add_alice_operational_data_model.py  c8f4e7a12b31_add_customer_identity_registration.py
tests/: test_business_rules.py  test_customer_identity_rules.py  test_health.py  test_orders_api.py
(+40 files in other folders)
